--- a/npmmod/package.json
+++ b/npmmod/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "node_practice",
+  "name": "npmmod",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "chalk_.js",
+  "type": "module",
   "scripts": {
-    "start": "node httpServer/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.3.0",
-    "url": "^0.11.4"
+    "validator": "^13.12.0"
   }
 }
